--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_DB: simpleapp
+      POSTGRES_DB: simplenextappdb
       POSTGRES_PASSWORD: postgres
     ports:
       - 5432:5432
@@ -23,6 +23,12 @@ services:
       - 8000:80
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+  app:
+    build: .
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
 
 volumes:
   local_pgdata:
