--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,15 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     depends_on:
       - postgres
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@pgdb:5432/simplenextappdb?schema=public
 
 volumes:
   local_pgdata:
