--- a/kubernetes/app-service.yaml
+++ b/kubernetes/app-service.yaml
@@ -13,6 +13,7 @@ spec:
     - name: "3000"
       port: 3000
       targetPort: 3000
+  type: LoadBalancer
   selector:
     io.kompose.service: app
 status:
