--- a/kubernetes/postgres-deployment.yaml
+++ b/kubernetes/postgres-deployment.yaml
@@ -38,6 +38,7 @@ spec:
           volumeMounts:
           - name: postgres-claim0
             mountPath: /var/lib/postgresql/data
+            subPath: postgres
           - name: init-script
             mountPath: /docker-entrypoint-initdb.d
           ports:
