--- a/kubernetes/app-service.yaml
+++ b/kubernetes/app-service.yaml
@@ -9,11 +9,11 @@ metadata:
     io.kompose.service: app
   name: app
 spec:
-  type: NodePort
   ports:
     - name: "3000"
       port: 3000
       targetPort: 3000
+  type: LoadBalancer
   selector:
     io.kompose.service: app
 status:
